Correct search results placement on mobile screens

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -113,6 +113,14 @@ ul.autocomplete img { position: absolute; top: 4px; left: 4px; }
 ul.autocomplete a { position: relative; padding: 10px 2px 0px 40px; height: 40px; }
 ul.autocomplete span { position: absolute; top: 10px; right: 5px; }
 
+/* cut search results on mobile devices to prevent overlapping of category names */
+@media only screen and (max-width: 767px) {
+	ul.autocomplete a {
+		padding: 10px 75px 0px 40px;
+		overflow: hidden;
+		text-overflow: ellipsis;
+	}
+}
 
 #addentity label { margin-right: 15px; }
 #addentity h3 { display: inline-block; }
